--- a/Digital_portfolio/index.html
+++ b/Digital_portfolio/index.html
@@ -121,7 +121,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Alagappa University  - Bachelor of Computer Application</p>
+            <p>Alagappa Govt Arts And Science College - Bachelor of Computer Application</p>
         </div>
     </section>
 
